# voxel_carving_with_AR_marker

./: .gitignore  CMakeLists.txt  README.md  aruco_samples_utility.hpp  calibration.hpp  calibration2.hpp  calibrationIntrinsic_main.cpp  calibration_charucoboard.hpp  calibration_normal_checkerboard.hpp  extrinsic_matrix.txt  foreground_segmentation.hpp  foreground_segmentation_main.cpp  functions_read_extrinsic_from_txt.hpp  main.cpp  notes.txt  obj_generation.hpp  output_charucoboard.yml  output_charucoboard2.yml  output_chessboard.yml  output_normal_checkerboard.yml  pose_estimation.hpp  pose_estimation_main.cpp  voxel_carving.hpp  voxel_carving_main.cpp
Data/: NeRF_chair_extrinsics.csv
calibration/: calibration.sln  calibration.vcxproj  main.cpp
foreground_segmentation/: foreground_segmentation.hpp  foreground_segmentation.sln  foreground_segmentation.vcxproj  foreground_segmentation.vcxproj.filters  main.cpp
pose_estimation/: main.cpp  pose_estimation.hpp  pose_estimation.sln  pose_estimation.vcxproj  pose_estimation.vcxproj.filters
voxel_carving/: main.cpp  voxel_carving.sln  voxel_carving.vcxproj
